<resources>
    <string name="app_name" translatable="false">Gictionary</string>

    <!--
    <string name="credits_information">Bu uygulama 192 Saatte Android Programlama Öğren programı aracılığıyla oluşturulan ekip tarafından geliştirilmiştir.</string> TODO: Remove or change this placeholder text -->

    <string name="credits_manager" translatable="false">Doğan Kılıç</string>
    <string name="credits_student_one" translatable="false">Begüm Balkıs</string>
    <string name="credits_student_two" translatable="false">Engin Özkurt</string>
    <string name="credits_student_three" translatable="false">İlkcan Ayvaz</string>
    <string name="credits_student_four" translatable="false">Merve Özbey</string>
    <string name="credits_student_five" translatable="false">Özlem Kesgin</string>
    <string name="credits_student_six" translatable="false">Samet Dundar</string>
    <string name="credits_student_seven" translatable="false">Sara Özdemir</string>
    <string name="pref_source_language" translatable="false">prefSelectedSourceLanguage</string>
    <string name="pref_destination_language" translatable="false">prefSelectedDestinationLanguage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="credits_information">This application was developed by Doğan Kılıç &amp; his Workers Co.</string>
    <string name="credits_project_manager" formatted="false">Manager : %s</string>
    <string name="btn_ok">OK</string>
    <string name="settings_select_source_language">Select Default Source Language</string>
    <string name="settings_select_destination_language">Select Default Destination Language</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="language_ar">Arabic</string>
    <string name="language_hy">Armenian</string>
    <string name="language_bs">Bosnian</string>
    <string name="language_bg">Bulgarian</string>
    <string name="language_zh">Chinese</string>
    <string name="language_en">English</string>
    <string name="language_fr">French</string>
    <string name="language_de">German</string>
    <string name="language_el">Greek</string>
    <string name="language_hi">Hindi</string>
    <string name="language_fa">Persian</string>
    <string name="language_he">Hebrew</string>
    <string name="language_it">Italian</string>
    <string name="language_ja">Japanese</string>
    <string name="language_ur">Urdu</string>
    <string name="language_pt">Portuguese</string>
    <string name="language_ru">Russian</string>
    <string name="language_ku">Kurdish</string>
    <string name="language_es">Spanish</string>
    <string name="language_sv">Swedish</string>
    <string name="language_tr">Turkish</string>
    <string name="title_from_language">From Language :</string>
    <string name="title_to_language">To Language :</string>

    <array name="languages">
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>
        <item>Chinese</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Kurdish</item>
        <item>Persian</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Turkish</item>
        <item>Urdu</item>
    </array>

</resources>
